Finished with Cave level and edited Building Level

--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,11 +133,11 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/Water
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem4=/Game/ThirdPersonBP/Maps/Water
+MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
 MRUItem5=/Game/ThirdPersonBP/Maps/Main
 MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
@@ -175,11 +175,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/TutorialLvl
+LastLevel=/Game/ThirdPersonBP/Maps/Building
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/Soul3.Soul3
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1217,11 +1217,13 @@ LevelCompletion_C.Navigation=True
 LevelCompletion_C.Localization=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/CustomMaterials/CheckpointMat.CheckpointMat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_Mat.T_Rock_Sandstone_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
+RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_D.T_Rock_Sandstone_D;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Rock/T_Cave_Rock_Large02_M.T_Cave_Rock_Large02_M;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_waternormal_Mat.T_waternormal_Mat;
 RecentlyPlaced=/Game/SoulCave/Environment/Textures/Water/T_WaterStream0002_2_Mat.T_WaterStream0002_2_Mat;
@@ -1235,8 +1237,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFact
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01_Mat.T_Gradinet_01_Mat;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Gradinet_01.T_Gradinet_01;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1278,22 +1278,23 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 SkyLight="\"Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint\" "
 Info=
+SM_DoorFrame_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem1=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/Building
-MRUItem4=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem5=/Game/ThirdPersonBP/Maps/Water
-MRUItem6=/Game/ThirdPersonBP/Blueprints/LevelCompletion
-MRUItem7=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem8=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem9=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Dash_bp
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem12=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/Maps/Building
+MRUItem1=/Game/ThirdPersonBP/Maps/Water
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem5=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem6=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem7=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem8=/Game/ThirdPersonBP/Blueprints/LevelCompletion
+MRUItem9=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem12=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem13=/Game/ThirdPersonBP/Blueprints/DJump_bp
 MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem15=/Game/ThirdPersonBP/Maps/Main
 MRUItem16=/Engine/EngineSky/C_Sky_Zenith_Color
@@ -1320,6 +1321,7 @@ MRUItem19=/Game/ThirdPersonBP/Blueprints/Soul2
 /Game/StarterContent/Particles/Actor_Blueprint.Actor_Blueprint=1
 /Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp=1
 /Game/ThirdPersonBP/Maps/Building.Building:PersistentLevel.Building=1
+/Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp=1
 
 [MaterialEditor]
 PrimType=1
@@ -2323,7 +2325,7 @@ K2Node_VariableSet=CableComponent.Collision.Collision,
 K2Node_VariableGet=CableComponent.Collision.Collision,
 PropertyWrapper=CableComponent.Collision.Collision,
 CharacterMovementComponent=CableComponent.Collision.Collision,
-HookPoint_C=
+HookPoint_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Dash_16=CableComponent.Collision.Collision,
 PauseMenu_C=
 PlayerController=
@@ -2348,6 +2350,7 @@ Swim_bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.Tex
 Respawn_bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 SoulBase_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 Soul3_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Dash_bp_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
