--- a/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,11 +133,11 @@ CurrentRotGridSize=0
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/ThirdPersonBP/Maps/Water
-MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem3=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem4=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem0=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem1=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem2=/Game/ThirdPersonBP/Maps/Building
+MRUItem3=/Game/ThirdPersonBP/Maps/Water
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem5=/Game/ThirdPersonBP/Maps/Main
 MRUItem6=/Game/Tutorial
 MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
@@ -145,9 +145,9 @@ MRUItem7=/Game/PhotoR_Backgrounds/Maps/Showcase_mountain_2
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -175,11 +175,15 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/Building
+LastLevel=/Game/ThirdPersonBP/Maps/Mountain
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+OpenAssetsAtExit=/Game/CustomMaterials/Yellow.Yellow
+OpenAssetsAtExit=/Game/CustomMaterials/HookMaterial.HookMaterial
+OpenAssetsAtExit=/Game/CustomMaterials/CheckpointMat.CheckpointMat
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/HookPoint.HookPoint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1215,8 +1219,18 @@ LevelCompletion_C.Accessibility=True
 LevelCompletion_C.Clipping=True
 LevelCompletion_C.Navigation=True
 LevelCompletion_C.Localization=True
+Mountain_C.Tick=True
+Mountain_C.Replication=True
+Mountain_C.Actor=True
+Mountain_C.Input=True
+MaterialExpression.MaterialExpression=True
+TutorialLvl_C.Tick=True
+TutorialLvl_C.Replication=True
+TutorialLvl_C.Actor=True
+TutorialLvl_C.Input=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp;
 RecentlyPlaced=/Game/CustomMaterials/CheckpointMat.CheckpointMat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Sandstone_Mat.T_Rock_Sandstone_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_Mat.T_Rock_Basalt_Mat;
@@ -1236,7 +1250,6 @@ RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_D.T_Rock_Basalt_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Tech_Dot_Mat.T_Tech_Dot_Mat;
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1251,7 +1264,7 @@ MeshMergeCullingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyI
 SwimSphere_bp_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 SceneComponent=
 ActorComponent=
 Object=
@@ -1261,7 +1274,7 @@ CharacterMovementComponent=
 PawnMovementComponent=
 NavMovementComponent=
 MovementComponent=
-CableComponent=
+CableComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent=
@@ -1281,26 +1294,26 @@ Info=
 SM_DoorFrame_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.CustomPrimitiveData\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Maps/Building
-MRUItem1=/Game/ThirdPersonBP/Maps/Water
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Blueprints/Dash_bp
-MRUItem5=/Game/ThirdPersonBP/Blueprints/Soul3
-MRUItem6=/Game/ThirdPersonBP/Maps/Mountain
-MRUItem7=/Game/ThirdPersonBP/Maps/TutorialLvl
-MRUItem8=/Game/ThirdPersonBP/Blueprints/LevelCompletion
-MRUItem9=/Game/ThirdPersonBP/Blueprints/PauseMenu
-MRUItem10=/Game/ThirdPersonBP/Blueprints/Respawn_bp
-MRUItem11=/Game/ThirdPersonBP/Blueprints/Swim_bp
-MRUItem12=/Game/ThirdPersonBP/Blueprints/Grapple_bp
-MRUItem13=/Game/ThirdPersonBP/Blueprints/DJump_bp
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem15=/Game/ThirdPersonBP/Maps/Main
-MRUItem16=/Engine/EngineSky/C_Sky_Zenith_Color
-MRUItem17=/Engine/EngineSky/BP_Sky_Sphere
-MRUItem18=/Game/StarterContent/Particles/Actor_Blueprint
-MRUItem19=/Game/ThirdPersonBP/Blueprints/Soul2
+MRUItem0=/Game/ThirdPersonBP/Blueprints/HookPoint
+MRUItem1=/Game/ThirdPersonBP/Maps/Mountain
+MRUItem2=/Game/ThirdPersonBP/Maps/TutorialLvl
+MRUItem3=/Game/ThirdPersonBP/Maps/Building
+MRUItem4=/Game/CustomMaterials/CheckpointMat
+MRUItem5=/Game/CustomMaterials/HookMaterial
+MRUItem6=/Game/CustomMaterials/Purple
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/ThirdPersonBP/Maps/Water
+MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem10=/Game/ThirdPersonBP/Blueprints/Dash_bp
+MRUItem11=/Game/ThirdPersonBP/Blueprints/Soul3
+MRUItem12=/Game/ThirdPersonBP/Blueprints/LevelCompletion
+MRUItem13=/Game/ThirdPersonBP/Blueprints/PauseMenu
+MRUItem14=/Game/ThirdPersonBP/Blueprints/Respawn_bp
+MRUItem15=/Game/ThirdPersonBP/Blueprints/Swim_bp
+MRUItem16=/Game/ThirdPersonBP/Blueprints/Grapple_bp
+MRUItem17=/Game/ThirdPersonBP/Blueprints/DJump_bp
+MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem19=/Game/ThirdPersonBP/Maps/Main
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Water_Lake.M_Water_Lake=0
@@ -1322,6 +1335,7 @@ MRUItem19=/Game/ThirdPersonBP/Blueprints/Soul2
 /Game/ThirdPersonBP/Blueprints/Respawn_bp.Respawn_bp=1
 /Game/ThirdPersonBP/Maps/Building.Building:PersistentLevel.Building=1
 /Game/ThirdPersonBP/Blueprints/Dash_bp.Dash_bp=1
+/Game/ThirdPersonBP/Maps/Mountain.Mountain:PersistentLevel.Mountain=1
 
 [MaterialEditor]
 PrimType=1
@@ -1418,8 +1432,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1294.400 Y=734.400
+ScreenPosition=X=110.400 Y=0.000
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
